--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
+    "gulp-cli": "^1.1.0",
     "gulp-eslint": "^1.0.0",
     "gulp-exec": "^2.1.2",
     "gulp-notify": "^2.0.1",
