--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "main": "lib",
   "scripts": {
-    "install": "gulp build",
+    "postinstall": "gulp build",
     "test": "gulp lint && mocha",
     "prepublish": "npm test && gulp build",
     "postpublish": "git push"
