--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "ms": "^0.7.1",
     "request": "^2.65.0",
     "tough-cookie": "^2.2.0",
-    "ws": "^0.8.0"
+    "ws": "^0.8.0",
+    "gulp-cli": "^1.1.0"
   },
   "devDependencies": {
     "babel": "5.8.29",
@@ -64,7 +65,6 @@
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
-    "gulp-cli": "^1.1.0",
     "gulp-eslint": "^1.0.0",
     "gulp-exec": "^2.1.2",
     "gulp-notify": "^2.0.1",
